# Xplore

./: Cargo.toml  README.md
src/: config.rs  main.rs  metadata.rs
src/filesystem/: entry.rs  manager.rs  mod.rs
src/ui/: app.rs  ui.rs
